--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   provider: ^6.0.2
   cached_network_image: ^3.2.0
   flutter_native_splash: ^2.2.16
+  just_audio: ^0.9.31
 
 dev_dependencies:
   flutter_test:
